feat(service): comment on recipes
